Close #42: Support fractional hour_interval
We only support `1/2`, `1/3`, `1/4`, and `1/6`, which should be
sufficient for almost all use cases, and should not cause too much
trouble when we switch to float arithmetic.

To keep that somewhat simple, we format the times now unconditionally
as `hh:mm` what causes a minor BC break, but is likely an improvement
for most users.  We do not yet support proper internationalization of
that format.

We support transparent migration to the slightly changed storage
format; previously we stored `YYYY-oo-dd-hh`; now we additionally store
the minutes (i.e. `YYYY-oo-dd-hh:mm`).

--- a/help/help.htm
+++ b/help/help.htm
@@ -114,7 +114,7 @@
 <h2 id="credits">Credits</h2>
 <p>Ocal_XH is inspired by the occcal plugin of CMSimple-Styles. Many thanks to Jens Broecher for having this nice idea.</p>
 <p>The plugin icon is designed by <a href="https://www.deviantart.com/deviantdark">deviantdark</a>. Many thanks for publishing the icon under LGPL.</p>
-<p>Many thanks to the community at the <a href="https://www.cmsimpleforum.com/">CMSimple_XH Forum</a> for tips, suggestions and testing. Especially I like to thank <em>rothom</em> for being the first tester and <em>hixi</em> for suggesting the hourly calendars. And many thanks to <em>lck</em> who found and reported serious bugs right after the release of version 1.0.</p>
+<p>Many thanks to the community at the <a href="https://www.cmsimpleforum.com/">CMSimple_XH Forum</a> for tips, suggestions and testing. Especially I like to thank <em>rothom</em> for being the first tester and <em>hixi</em> for suggesting the hourly calendars. And many thanks to <em>lck</em> who found and reported serious bugs right after the release of version 1.0. Also thanks to <em>Tata</em> who inspired a couple of enhancements.</p>
 <p>And last but not least many thanks to <a href="https://www.harteg.dk/">Peter Harteg</a>, the “father” of CMSimple, and all developers of <a href="https://www.cmsimple-xh.org/">CMSimple_XH</a> without whom this amazing CMS would not exist.</p>
 </body>
 </html>
