--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -113,7 +113,7 @@
 <h2 id="danksagung">Danksagung</h2>
 <p>Ocal_XH wurde durch das occcal Plugin von CMSimple-Styles angeregt. Vielen Dank an Jens Broecher für diese nette Idee.</p>
 <p>Das Plugin-Icon wurde von <a href="https://www.deviantart.com/deviantdark">deviantdark</a> gestaltet. Vielen Dank für die Veröffentlichung des Icons unter LGPL.</p>
-<p>Vielen Dank an die Gemeinschaft im <a href="https://www.cmsimpleforum.com/">CMSimple_XH Forum</a> für Tipps, Anregungen und das Testen. Besonders möchte ich <em>rothom</em>, der der erste Tester war, und <em>hixi</em>, die die stündlichen Kalender vorgeschlagen haben, danken. Und vielen Dank an <em>lck</em>, der schwerwiegende Fehler kurz nach der Veröffentlichung von Version 1.0 fand und gemeldet hat.</p>
+<p>Vielen Dank an die Gemeinschaft im <a href="https://www.cmsimpleforum.com/">CMSimple_XH Forum</a> für Tipps, Anregungen und das Testen. Besonders möchte ich <em>rothom</em>, der der erste Tester war, und <em>hixi</em>, die die stündlichen Kalender vorgeschlagen haben, danken. Und vielen Dank an <em>lck</em>, der schwerwiegende Fehler kurz nach der Veröffentlichung von Version 1.0 fand und gemeldet hat. Ebenfalls Dank an <em>Tata</em>, der einige Verbesserungen angeregt hat.</p>
 <p>Und zu guter letzt vielen Dank an <a href="http://www.harteg.dk/">Peter Harteg</a>, den „Vater“ von CMSimple, und allen Entwicklern von <a href="https://www.cmsimple-xh.org/de/">CMSimple_XH</a> ohne die es dieses phantastische CMS nicht gäbe.</p>
 </body>
 </html>
